--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
             margin: 0px;
             padding: 0px;
             height: 100%;
+            background-color: #FDFCE0;
         }
     </style>
 </body>
